--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .bgimg-1 {
-            background-image: url("img_parallax.jpg");
+            background-image: url("office_blur.jpg");
             height: 100%;
         }
 
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <p style="padding:5px 15px">This example creates a full page background image. Try to resize the browser window to see how it always will cover the full screen (when scrolled to top), and that it scales nicely on all screen sizes.</p>
+    <p style="padding:5px 15px">Copyright (c) 2020, 12410613 Canada Corporation</p>
 
 </body>
 </html>
