--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .bgimg-1 {
-            background-image: url("office_blur.jpg");
+            background-image: url("https://ohenley.github.io/superpoll/office_blur.jpg");
             height: 100%;
         }
 
