--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
         .bgimg-1 {
-            background-image: url("./office_blur.jpg");
+            background-image: url("./office_blur.png");
             height: 100%;
         }
 
