--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
             font: 20px "Lato", sans-serif;
             color: #111;
         }
+        
+        #copyright {
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -58,7 +62,7 @@
         </div>
     </div>
 
-    <p style="padding:5px 15px">Copyright (c) 2020, 12410613 Canada Corporation</p>
+    <p id="copyright" style="padding:5px 15px">Copyright (c) 2020, 12410613 Canada Corporation</p>
 
 </body>
 </html>
