--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         }
 
         .logo {
-            object-fit: contain;
+            background-repeat: no-repeat;
+            background-size: auto;
             background-image: url("./logo.png");
         }
 
