--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<img src="images/logo.png" alt="IMG">
 			</div>
 
-			<form class="contact1-form validate-form">
+			<form class="contact1-form validate-form" action="http://formspree.io/olivier.henley@gmail.com" method="POST">
 				<span class="contact1-form-title">
 					Get in touch
 				</span>
