--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<form class="contact1-form validate-form" action="https://formspree.io/f/meqpkoyo" method="POST">
 				<span class="contact1-form-title">
-					Get in touch
+					SuperPoll - Get in touch
 				</span>
 
 				<div class="wrap-input1 validate-input" data-validate = "Name is required">
